# multiocr

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
multiocr/: README.md  __init__.py  azure_ocr.py  base_class.py  fitz_ocr.py  google_vision_ocr.py  main.py  mmocr.py  ocr_aws_textract.py  ocr_paddle.py  ocr_tesseract.py  pyproject.toml  utils.py
multiocr/multiocr/: base_class.py  main.py  ocr_aws_textract.py  ocr_paddle.py  ocr_tesseract.py
multiocr/pipelines/: __init__.py
multiocr/pipelines/aws_textract/: engine.py
multiocr/pipelines/doctr_ocr/: engine.py  readme.md
multiocr/pipelines/doctr_ocr/doctr/datasets/: __init__.py  utils.py
multiocr/pipelines/doctr_ocr/doctr/io/: elements.py
multiocr/pipelines/doctr_ocr/doctr/io/image/: __init__.py  base.py  pytorch.py  tensorflow.py
multiocr/pipelines/doctr_ocr/doctr/models/: builder.py  core.py  zoo.py
multiocr/pipelines/doctr_ocr/doctr/models/artefacts/: face.py
multiocr/pipelines/doctr_ocr/doctr/models/classification/: zoo.py
multiocr/pipelines/doctr_ocr/doctr/models/detection/: core.py  zoo.py
multiocr/pipelines/doctr_ocr/doctr/models/factory/: hub.py
multiocr/pipelines/doctr_ocr/doctr/models/predictor/: __init__.py  base.py  pytorch.py  tensorflow.py
multiocr/pipelines/doctr_ocr/doctr/models/preprocessor/: pytorch.py  tensorflow.py
multiocr/pipelines/doctr_ocr/doctr/utils/: multithreading.py
multiocr/pipelines/easy_ocr/: engine.py
multiocr/pipelines/paddle_ocr/: engine.py
multiocr/pipelines/tesseract/: engine.py
tests/: test_ocr.py
(+49 files in other folders)
